--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Lasagna Recipe</h1>
-
+    <img src="../images/lasagna.webp" alt="Lasagna" height="300" width="300">
 
     <h2>How to Make Lasagna</h2>
     <p>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient
