--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Pancakes Recipe</h1>
-
+    <img src="../images/pancake.webp" alt="pancake" height="300" width="350">
 
     <h2>How to make Pancakes</h2>
 
