--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="./recipes/pancakes.html">Pancakes Recipe</a></li>
+    </ul>
 
 </body>
 
