add classes to the files to style the pages

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="./RecipeStyle.css">
 </head>
 
-<body>
-    <h1>Lasagna Recipe</h1>
+<body class="lasagna">
+    <h1 class="heading">Lasagna Recipe</h1>
     <img src="../images/lasagna.webp" alt="Lasagna" height="300" width="300">
 
     <h2>How to Make Lasagna</h2>
