--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pancakes</title>
+    <link rel="stylesheet" href="./RecipeStyle.css">
 </head>
 
-<body>
-    <h1>Pancakes Recipe</h1>
-    <img src="../images/pancake.webp" alt="pancake" height="300" width="350">
+<body class="pancake">
+    <h1 class="heading">Pancakes Recipe</h1>
+    <img class="pancake_Img" src="../images/pancake.webp" alt="pancake" height="300" width="350">
 
     <h2>How to make Pancakes</h2>
 
